2011-05-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-single-sat.c
    * src/config-keys.h
    * src/sat-cfg.c
    * src/sat-cfg.h
    * src/gtk-sat-module.c
    * src/gtk-single-sat.c
    Save selected satellite in single sat view.
    Part of Feature Request: 3179738

2011-05-14 Charles Suprin <hamaa1vs at gmail.com>

    * data/trsp/25338.trsp
    * data/trsp/26536.trsp
    * data/trsp/27543.trsp
    Update NOAA-15,-16,-17 transponder frequencies.

2011-05-01 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-popup.c
    * src/gtk-sat-module.c
    * src/gtk-sat-module.h
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    * src/gtk-single-sat.c
    * src/gtk-single-sat.h
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    * src/gtk-sat-map.c
    * src/gtk-sat-map.h
    * src/gtk-polar-view.c
    * src/gtk-polar-view.h
    New module menu item to allow selection of a satellite in all views at the
    same time. Related to feature request 3179102: Right click on satellite to
    add the track (probably the closest we can get to "global selection" without
    breaking the design).


2011-04-29 Alexandru Csete <oz9aec at gmail.com>

    * data/desktop/gpredict.desktop.in
    Fixed bug 3294829: Program name wrong in desktop files.
    

2011-04-03 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rot-knob.c
    * src/gtk-rot-knob.h
    * src/gtk-freq-knob.c
    * src/gtk-freq-knob.h
    Allow changing radio frequency and rotator position using mouse buttons
    and wheel (feature req 2130926). Up/down arrows are kept for now.
    
    * doc/um/gpredict-user-manual.odt
    Updated with info about using the mouse wheel over the digits.


2011-04-01 Charles Suprin <hamaa1vs at gmail.com>

    * win32/gpredict.rc
    * win32/gpredict.exe.manifest
    * win32/build-config.h
    Apply Alan Moffet's changes for win32 build.


2011-04-01 Alexandru Csete <oz9aec at gmail.com>

    * src/pass-to-txt.c
    * src/sat-pass-dialogs.c