@@ -5,8 +5,9 @@ Changes in version 1.4 (TBD)
 - Feature request 2130926: Change frequency using mouse wheel. Also for rotator controller.
 - Applied and extended patch 3237220: natural sort for sat list in module config
 - Improve handling of decayed satellites.
-- Fixed bug 3250344: Win32 uild not working with hamlib.
+- Fixed bug 3250344: Win32 build not working with hamlib.
 - Fixed bug 3294829: Program name wrong in desktop files.
+- Fixed bug 3309110: 100% on manual time adjustment.
 
 
 Changes in version 1.3 (1 Mar 2011)
